icon list: scrollbar bug fix

--- a/widgets/materialdesign/css/widgets.css
+++ b/widgets/materialdesign/css/widgets.css
@@ -2011,10 +2011,6 @@ svg.materialdesign-widget .materialdesign-button__icon {
 }
 
 /* iconList */
-.materialdesign-icon-list {
-  overflow: visible !important;
-}
-
 .materialdesign-icon-list-container {
   display: flex;
   /* justify-content: center; */
